--- a/Backend/data/config.env
+++ b/Backend/data/config.env
@@ -1,3 +1,7 @@
 PORT = 4000
 MONGO_URI = mongodb://127.0.0.1:27017/mernAssign
 node_env = Development
+
+CLOUDINARY_NAME = dixomsint
+CLOUDINARY_API_KEY = 791782564133376
+CLOUDINARY_API_SECRET = 4_7xJhFmB_1Upw2NIdKNe2NQTKk
