--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.3.2",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.11.0"
   }
 }
