--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.3.1",
     "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -41,5 +46,5 @@
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   },
-  "proxy":"http://localhost:4000"
+  "proxy": "http://localhost:4000"
 }
